--- a/pages/home.html
+++ b/pages/home.html
@@ -10,10 +10,10 @@
         <div class="hero">
             <div class="hero-text">
                 <p>Hello,</p>
-                <h1>I'm <span>Prem Shahi</span></h1>
-                <p>UI/UX Designer</p>
-                <p class="location">From Nepal</p>
-                <a href="#" class="btn">Hire Me</a>
+                <h1>I'm <span>Abi Pasundan</span></h1>
+                <p>Factory Worker</p>
+                <p class="location">Indonesia</p>
+                <a href="https://github.com/AbiPasundan/" class="btn">Hire Me</a>
             </div>
             <div class="hero-image">
                 <img src="https://placehold.co/400x400" alt="Portrait of Prem Shahi - UI/UX Designer">
