--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,7 @@
     <!-- Contact Form -->
     <div class="container">
         <h2>Contact Us</h2>
-        <form action="#" method="POST">
+        <form name="contact" method="POST" netlify>
             <div class="form-group">
                 <label for="name">Full Name</label>
                 <input type="text" id="name" name="name" placeholder="Enter your full name" required>
