--- a/pages/about.html
+++ b/pages/about.html
@@ -1,2 +1,4 @@
-<h1>About Us</h1>
-<p>Learn more about us on this page loaded dynamically.</p>
+<div class="container">
+    <h1>About Us</h1>
+    <p>Learn more about us on this page loaded dynamically.</p>
+</div>
