--- a/pages/games.html
+++ b/pages/games.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/games.css">
 </head>
 <body>
+    <div class="container">
     <header>
         <h1>FreeToGame API Showcase</h1>
         <p>Discover free-to-play games!</p>
@@ -19,7 +20,6 @@
     <footer>
         <p>Powered by FreeToGame API</p>
     </footer>
-    <script src="../script/script.js"></script>
-    <!-- <script src="../script/games.js"></script> -->
+</div>
 </body>
 </html>
